<resources>
    <string name="app_name">TASKmanager</string>
    <string name="search_hint">Search Tasks</string>
    <string name="task_category">Task Category</string>
    <string name="this_is_where_you_fill_the_description_of_the_task">This is where you fill the description of the Task …</string>
    <string name="task_title">Task Title</string>
    <string name="more">MORE</string>
    <string name="low">LOW</string>
    <string name="medium">MEDIUM</string>
    <string name="high">HIGH</string>
    <string name="set_priority">SET PRIORITY</string>
    <string name="add_image">Add Image</string>
    <string name="delete_task">Delete Task</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="update_your_task">Update your task</string>
    <string name="is_your_task_complete">Is your task complete?</string>
</resources>