<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/backgorund_dailog">


    <ImageView
        android:id="@+id/imageDeleteTask"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="@string/delete_task"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imageDeleteTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageDeleteTask"
        app:layout_constraintTop_toTopOf="@+id/imageDeleteTask"

        />

    <TextView
        android:id="@+id/textDeleteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_delete_this_task"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageDeleteTask"

        />

    <TextView
        android:id="@+id/textDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/delete"
        android:textColor="@color/colorTaskColor3"
        android:textSize="@dimen/_13ssp"
        android:textAllCaps="true"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDeleteMessage"
        />

    <TextView
        android:id="@+id/textCancelDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/teal_700"
        android:padding="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@id/textDeleteTask"
        app:layout_constraintTop_toBottomOf="@id/textDeleteMessage"

        />
</androidx.constraintlayout.widget.ConstraintLayout>