<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutBottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_bottombar"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="@dimen/_40sdp">

    <TextView
        android:id="@+id/textMore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/more"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:id="@+id/layoutPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"

        >
        <FrameLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_gravity="center"
                android:id="@+id/viewColorLow"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_taskcolor_low"
                />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imagePriorityLow"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_gravity="center"
                android:id="@+id/viewColorMedium"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_taskcolor_medium"
                />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imagePriorityMedium"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_gravity="center"
                android:id="@+id/viewColorHigh"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_taskcolor_high"
                />

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imagePriorityHigh"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/white" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/low"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_medium"

            />
        <TextView
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/medium"
            android:textColor="@color/colorTaskColor2"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_medium"

            />
        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/high"
            android:textColor="@color/colorTaskColor3"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/ubuntu_medium"

            />

    </LinearLayout>

</LinearLayout>